--- a/src/style.css
+++ b/src/style.css
@@ -1,7 +1,68 @@
+body {
+  background: #f2f9f1;
+  font-family: "Roboto", sans-serif;
+}
+
+.container {
+  margin: 120px auto;
+  max-width: 75%;
+  text-align: center;
+}
+
+h1 {
+  font-weight: 800;
+  font-style: normal;
+  color: #5c715e;
+}
+
+a {
+  color: #5c715e;
+  text-decoration: none;
+}
+
 form {
-  margin-bottom: 10px;
+  padding: 30px 20px;
+  background: white;
+  border-radius: 10px;
+  box-shadow: 0px 20px 60px rgba(65, 50, 100, 0.08);
+  display: flex;
+}
+
+.instructions {
+  width: 80%;
+  color: #5c715e;
+  padding: 16px;
+  font-size: 16px;
+  border-radius: 50px;
+  border: 1px solid rgba(221, 238, 223);
+}
+
+.submit-button {
+  padding: 16px;
+  margin-left: 10px;
+  border-radius: 25px;
+  color: #5c715e;
+  border: none;
+  box-shadow: 0px 20px 60px rgba(65, 50, 100, 0.08);
+  transition: all 150ms ease-in-out;
+}
+
+.submit-button:hover {
+  cursor: pointer;
+  background: #5c715e;
+  color: #ddeedf;
+}
+
+main {
+  margin: 20px 0;
+  background: white;
+  padding: 15px;
+  border-left: 3px solid #5c715e;
+  box-shadow: 0px 20px 60px rgba(65, 50, 100, 0.08);
+  font-size: 14px;
 }
 
 footer {
   margin-top: 10px;
+  font-size: 11px;
 }
