--- a/src/style.css
+++ b/src/style.css
@@ -5,7 +5,7 @@ body {
 
 .container {
   margin: 120px auto;
-  max-width: 75%;
+  max-width: 600px;
   text-align: center;
 }
 
@@ -60,6 +60,15 @@ main {
   border-left: 3px solid #5c715e;
   box-shadow: 0px 20px 60px rgba(65, 50, 100, 0.08);
   font-size: 14px;
+}
+
+ul {
+  padding: 0;
+}
+
+li {
+  list-style: none;
+  padding-bottom: 5px;
 }
 
 footer {
